WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308126
[GStreamer] Gracefully handle missing autovideoflip element
https://bugs.webkit.org/show_bug.cgi?id=308126
Summary
[GStreamer] Gracefully handle missing autovideoflip element
Philippe Normand
Reported
2026-02-18 05:15:15 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2026-02-18 05:18:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58924
EWS
Comment 2
2026-02-19 00:52:02 PST
Committed
307815@main
(1cd4a698b1a2): <
https://commits.webkit.org/307815@main
> Reviewed commits have been landed. Closing PR #58924 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-19 00:53:12 PST
<
rdar://problem/170705078
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug