[GStreamer] Gracefully handle missing autovideoflip element https://bugs.webkit.org/show_bug.cgi?id=308126

Reviewed by Xabier Rodriguez-Calvar.

Emit a warning when the autovideoflip element couldn't be added to the video encoder.

* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
(videoEncoderSetEncoder):

Canonical link: https://commits.webkit.org/307815@main